--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
                         </svg>
                     </div>
                     <div class="header_search">
-
+                        <input type="text" class="header_search-input" placeholder="Nhập để tìm kiếm thông tin sản phẩm" >
+                        <div class="header_search-select">
+                            <span class="header_search-select-label">Trong shop</span>
+                            <i class="header_search-select-icon fas fa-chevron-down"></i>
+                        </div>
                     </div>
                     <div class="header_cart">
                         <i class="header_cart-icon fas fa-shopping-cart"></i>
