--- a/index.html
+++ b/index.html
@@ -373,6 +373,40 @@
                                </div>
                            </div>
                        </div>
+                       <ul class="pagination home-product-pagination">
+                           <li class="pagination-item"> 
+                               <a href="" class="pagination-link">
+                                   <i class="pagination_item-icon fas fa-angle-left"></i>
+                               </a>
+                           </li>
+                            <li class="pagination-item pagination-item-active"> 
+                                <a href="" class="pagination-link">1</a>
+                            </li>
+                            <li class="pagination-item"> 
+                                <a href="" class="pagination-link">2</a>
+                            </li>
+                            <li class="pagination-item"> 
+                                <a href="" class="pagination-link">3</a>
+                            </li>
+                            <li class="pagination-item"> 
+                                <a href="" class="pagination-link">4</a>
+                            </li>
+                            <li class="pagination-item"> 
+                                <a href="" class="pagination-link">5</a>
+                            </li>
+                            <li class="pagination-item"> 
+                                <a href="" class="pagination-link">...</a>
+                            </li>
+                            <li class="pagination-item"> 
+                                <a href="" class="pagination-link">14</a>
+                            </li>
+                           <li class="pagination-item"> 
+                                <a href="" class="pagination-link">
+                                    <i class="pagination_item-icon fas fa-angle-right"></i>
+                                </a>
+                            </li>
+
+                       </ul>
                     </div>
                 </div>  
             </div>
